improve swagger doc
