# internal/models/task_model.go
@@ -66,20 +66,22 @@ type TaskRequest struct {
 }
 
 type TaskDTO struct {
-	ID       uint        `json:"id"`
-	Title    string      `json:"title"`
-	Priority Priority    `json:"priority"`
-	Status   bool        `json:"status"`
-	Category CategoryDTO `json:"category"`
+	ID        uint        `json:"id"`
+	CreatedAt time.Time   `json:"created_at"`
+	Title     string      `json:"title"`
+	Priority  Priority    `json:"priority"`
+	Status    bool        `json:"status"`
+	Category  CategoryDTO `json:"category"`
 }
 
 func (t *Task) ToDTO() *TaskDTO {
 	return &TaskDTO{
-		ID:       t.ID,
-		Title:    t.Title,
-		Priority: t.Priority,
-		Status:   t.Status,
-		Category: *t.Category.ToDTO(),
+		ID:        t.ID,
+		CreatedAt: t.CreatedAt,
+		Title:     t.Title,
+		Priority:  t.Priority,
+		Status:    t.Status,
+		Category:  *t.Category.ToDTO(),
 	}
 }
 
